Fix more articles alignment

--- a/themes/m1cr0blog/static/css/custom.css
+++ b/themes/m1cr0blog/static/css/custom.css
@@ -196,6 +196,10 @@ footer {
 
 /* Index next articles */
 
+#more-articles {
+	width: 100%;
+}
+
 .next-article {
 	width: 90%;
 	height: 256px;
